Review steps, add restriction to access only using ALB in step-3